fix: project card alignment

--- a/app/Entirety/static/scss/style.scss
+++ b/app/Entirety/static/scss/style.scss
@@ -57,3 +57,9 @@
 .card:hover{
     transform:scale(1.05);
 }
+
+// card image small
+.card-img-top{
+   height: 200px;
+   object-fit: fill;
+}
